practice/docker-registry/nginx-offiicals/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.6.2
           
          ports:
          - name: http
            containerPort: 5000
          volumeMounts:
            - name: image-store
              mountPath: /var/lib/registry
      imagePullSecrets:
        - name: regcred

      # mount the persistent volume nfs-volume
      volumes:
        - name: image-store
          persistentVolumeClaim:
            claimName: docker-registry-pvc

---

kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
spec:
  # use loadbalancer to expose the service
  selector:
    app: docker-registry
  type: LoadBalancer
  ports:
  - name: http
    port: 5000
    targetPort: 5000
